GNOME Bugzilla – Bug 672828
Crash when trying to accept a subscription request
Last modified: 2012-04-19 15:10:27 UTC
GLib-GObject-WARNING **: invalid cast from `EmpathyAvatarImage' to `EmpathyAvatarChooser' Program received signal SIGTRAP, Trace/breakpoint trap. 0x00007ffff56be06c in g_logv (log_domain=0x7ffff59f1070 "GLib-GObject", log_level=G_LOG_LEVEL_WARNING, format=0x7ffff59f27e0 "invalid cast from `%s' to `%s'", args1=0x7fffffffcc68) at gmessages.c:758 758 G_BREAKPOINT (); (gdb) bt
+ Trace 229950
Created attachment 210602 [details] [review] contact_widget_contact_update: check if widget_avatar is a chooser information->widget_avatar can actually be a EmpathyAvatarImage when displaying a read only widget.
Usually that code does if (information->flags & EMPATHY_CONTACT_WIDGET_EDIT_AVATAR) instead. But that's fine as you did :) That code is all ugly anyway :)
Attachment 210602 [details] pushed as 1454a06 - contact_widget_contact_update: check if widget_avatar is a chooser
*** Bug 674346 has been marked as a duplicate of this bug. ***