contact_widget_contact_update: check if widget_avatar is a chooser

information->widget_avatar can actually be a EmpathyAvatarImage when
displaying a read only widget.

https://bugzilla.gnome.org/show_bug.cgi?id=672828