libempathy-gtk/empathy-contact-widget.c
@@ -1406,8 +1406,11 @@ contact_widget_contact_update (EmpathyContactWidget *information)
     }
   else
     {
-      empathy_avatar_chooser_set_account (
-          EMPATHY_AVATAR_CHOOSER (information->widget_avatar), account);
+      if (EMPATHY_IS_AVATAR_CHOOSER (information->widget_avatar))
+        {
+          empathy_avatar_chooser_set_account (
+              EMPATHY_AVATAR_CHOOSER (information->widget_avatar), account);
+        }
 
       if ((information->flags & EMPATHY_CONTACT_WIDGET_NO_ACCOUNT) == 0)
         {
